Make container-full avoid overlap with footer

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,4 +2,5 @@
   margin: 0 auto;
   width: 100%;
   min-height: 100%;
+  overflow-y: scroll;
 }
